fix z-index

--- a/src/client/assets/sass/custom-style.css
+++ b/src/client/assets/sass/custom-style.css
@@ -8,3 +8,10 @@
     height: 100%;
     border: none;
 }
+#minimap{
+	z-index: 1;
+}
+
+#minimap-point{
+	z-index: 1;
+}
